# Sour_Editor

./: .gitignore  CMakeLists.txt  README.md  Sour_Editor.sln
Sour_Editor/: EditorTools.cpp  EditorTools.h  EventHandler.cpp  EventHandler.h  InputMapping.cpp  InputMapping.h  PhysicsDestructionBox2D - Rework.cpp  PhysicsDestructionBox2D.cpp  Polygon.cpp  Polygon.h  Sour_Editor - Accel.cpp  Sour_Editor.vcxproj  Sour_Editor.vcxproj.filters  imgui.ini  pch.h
Sour_Editor/Bowyer-Watson/: Delunay.cpp  Delunay.h
Sour_Editor/Bowyer-Watson Accel/: Delunay.cpp  Delunay.h
Sour_Editor/Data Structures/: DCELHE.cpp  DCELHE.h
Sour_Editor/imgui/: imconfig.h
Sour_Editor/x64/Debug/: vc141.idb
Sour_Editor/x64/Debug/Sour_Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sour_Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/Bowyer-Watson/: Delunay.h
include/Box2D/lib/: Box2D.lib
include/ECS/: ComponentArray.h  ComponentManager.h  Coordinator.h  ECS.h  EntityManager.h  SystemManager.h
include/main/: Components.h  EditorSystems.h  EditorTools.h  EventHandler.h  InputMapping.h  Inspector.cpp  Inspector.h  PhysicsSystem.h  Polygon.h  RenderSystem.h  Voronoi_Tessellation.h  pch.h
lib/: Box2D-d.lib
lib/12POLY/: Box2D-d.lib
src/Bowyer-Watson/: CMakeLists.txt  Delunay.cpp
src/Bowyer-Watson/Data_Structures/: CMakeLists.txt.in  DCELHE.cpp
src/ECS/: CMakeLists.txt  ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp
src/main/: CMakeLists.txt  EditorSystems.cpp  EditorTools.cpp  EventHandler.cpp  InputMapping.cpp  Inspector.cpp  PhysicsSystem.cpp  Polygon.cpp  RenderSystem.cpp  Sour_Editor.cpp  Voronoi_Tessellation.cpp
x64/Debug/: imgui.ini
